# ed25519-quirks

./: .babelrc  .eslintrc  .gitignore  .travis.yml  README.md  basics.js  build.sh  bundle.6ef1877d.js  index.html  karma.conf.js  malleability.js  netlify.toml  package-lock.json  package.json  webpack.config.js  wildcards.js
.github/: dependabot.yml
.github/workflows/: ci.yml
about/: index.html
assets/: build-font.js
assets/templates/: _base.pug  _layout.pug  about.pug  basics.pug  clamping.pug  index.pug  malleability.pug  pages.json  wildcards.pug
basics/: index.html
clamping/: index.html
malleability/: index.html
src/: App.vue  TextDecoder.js  common.js  common.scss  crypto.js  encoding.js  index.js  mount.js  router.js
src/about/: index.js
src/basics/: Basics.vue  BasicsPage.vue  index.js
src/clamping/: index.js
src/components/: DataRow.vue  Equation.vue  Seed.vue  SeedRow.vue  Status.vue  StatusSpan.vue
src/home/: index.js
src/malleability/: Malleability.vue  MalleabilityPage.vue  index.js
src/mixins/: withEncoding.js
src/pages/: About.vue  Basics.vue  Clamping.vue  Intro.vue  Malleability.vue  Wildcards.vue
src/wildcards/: Wildcards.vue  WildcardsPage.vue  index.js
templates/: _base.pug  _layout.pug  about.pug  base.css  basics.pug  clamping.pug  index.pug  malleability.pug  pages.json  wildcards.pug
test/: crypto.spec.js
test/components/: Seed.spec.js
wasm/: Cargo.toml  deny.toml
wasm/src/: lib.rs
wasm/tests/: wasm.rs
wildcards/: index.html
