[package]
name = "ed25519-quirks"
edition = "2018"
version = "0.1.0"
authors = ["Alex Ostrovski <ostrovski.alex@gmail.com>"]
license = "Apache-2.0"
description = "WASM part of the Ed25519 Quirks web app"
repository = "https://github.com/slowli/ed25519-quirks"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# WASM / Web stuff.
wasm-bindgen = "0.2.69"
wee_alloc = { version = "0.4.5", optional = true }

# Main dependencies.
num-bigint = "0.2.6"
sha2 = { version = "0.8.1", default-features = false }
rand_core = "0.5.1"

# We don't use `clear_on_drop` in code. However, it is used in `ed25519-dalek`,
# which, if the `no_cc` feature is not set, will fail to compile for WASM.
clear_on_drop = { version = "0.2.3", features = ["no_cc"] }

[dependencies.curve25519]
package = "curve25519-dalek"
version = "2.0.0"
default-features = false
features = ["u64_backend"]

[dependencies.ed25519]
package = "ed25519-dalek"
version = "=1.0.0-pre.3"
default-features = false
# Kudos to the crate authors for checking signature scalar malleability by default;
# however, we need malleability for our use case.
features = ["std", "u64_backend", "legacy_compatibility"]

[dev-dependencies]
wasm-bindgen-test = "0.3.9"

[features]
default = ["wee_alloc"]

[profile.release]
lto = true
opt-level = "s"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Os", "--enable-mutable-globals"]
