[package]
name = "ed25519-quirks"
edition = "2021"
version = "0.1.0"
authors = ["Alex Ostrovski <ostrovski.alex@gmail.com>"]
license = "Apache-2.0"
description = "WASM part of the Ed25519 Quirks web app"
repository = "https://github.com/slowli/ed25519-quirks"
publish = false

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Os", "--enable-mutable-globals"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# WASM / Web stuff.
wasm-bindgen = "0.2.83"

# Main dependencies.
num-bigint = "0.4"
rand_core = { version = "0.6", default-features = false }

[dependencies.curve25519-dalek]
version = "4.1.0"
default-features = false

[dependencies.ed25519-dalek]
version = "2.1.0"
default-features = false
# Kudos to the crate authors for checking signature scalar malleability by default;
# however, we need malleability for our use case.
features = ["digest", "hazmat", "legacy_compatibility"]

[dev-dependencies]
wasm-bindgen-test = "0.3.33"

[profile.release]
panic = "abort"
codegen-units = 1
opt-level = "z" # Optimize for size, rather than speed
lto = true
